k8s-config/url-shortener-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-deployment
  labels:
    app: url-shortener-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener-container
          image: marinoandrea/wscbs-url-shortener:1.0
          ports:
            - containerPort: 5000
