k8s-config/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5000
  selector:
    app: auth-service-app
