k8s-config/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service-service
spec:
  type: LoadBalancer
  selector:
    app: front-service-app
  ports:
    - protocol: TCP
      port: 80
