k8s-config/url-shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: url-shortener-app
