k8s-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: url-shortener-ingress-class
  rules:
    - http:
        paths:
          - path: /api/v1/auth/(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 5001
          - path: /api/v1/shortener/(.*)
            pathType: Prefix
            backend:
              service:
                name: url-shortener
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: front-service
                port:
                  number: 80
